--- a/edilson/desafio21_03/package.json
+++ b/edilson/desafio21_03/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "mongodb",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +13,8 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "helmet": "^8.0.0",
-    "mongodb": "^6.14.2",
-    "mongoose": "^8.12.1",
+    "helmet": "^8.1.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.13.0",
-    "nodemon": "^3.1.9"
+    "mysql2": "^3.14.0"
   }
 }
